--- a/pallets/transaction-pause/Cargo.toml
+++ b/pallets/transaction-pause/Cargo.toml
@@ -6,16 +6,16 @@ edition="2021"
 [dependencies]
 codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false }
 scale-info        ={ version="2.1", default-features=false, features=["derive"] }
-sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", optional=true, default-features=false }
-frame-support     ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-frame-system      ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
-sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43", default-features=false }
+sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", optional=true, default-features=false }
+frame-support     ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+frame-system      ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
 
 [dev-dependencies]
-sp-core           ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
-sp-io             ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
-pallet-balances   ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
+sp-core           ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-io             ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+pallet-balances   ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 smallvec          ="1.4.1"
 pallet-constraints={ version="3.0.0-monthly-2021-10", default-features=false, path="../constraints" }
 
