--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -19,24 +19,25 @@ hex-literal       ="0.3.4"
 entropy-shared    ={ path="../shared" }
 
 # For CLI
-clap            ={ version="4.4.6", features=["derive"] }
-anyhow          ="1.0.75"
-chacha20poly1305="0.10.1"
-blake2          ="0.10.4"
-futures         ="0.3"
-num             ="0.4.0"
-rand_core       ="0.6.4"
-serde           ={ version="1.0", default-features=false, features=["derive"] }
-serde_json      ="1.0"
-thiserror       ="1.0.47"
-x25519-dalek    ="2.0.0-pre.1"
-zeroize         ="1.5.7"
-generic-array   ="0.14.6"
-entropy-protocol={ path="../protocol", features=["server"] }
-reqwest         ={ version="0.11", features=["json", "stream"] }
-sha3            ="0.10.8"
-base64          ="0.13.0"
-synedrion       ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+clap                   ={ version="4.4.6", features=["derive"] }
+anyhow                 ="1.0.75"
+chacha20poly1305       ="0.10.1"
+blake2                 ="0.10.4"
+futures                ="0.3"
+num                    ="0.4.0"
+rand_core              ="0.6.4"
+serde                  ={ version="1.0", default-features=false, features=["derive"] }
+serde_json             ="1.0"
+thiserror              ="1.0.47"
+x25519-dalek           ="2.0.0"
+zeroize                ="1.5.7"
+generic-array          ="0.14.6"
+entropy-protocol       ={ path="../protocol", features=["server"] }
+reqwest                ={ version="0.11", features=["json", "stream"] }
+sha3                   ="0.10.8"
+base64                 ="0.13.0"
+synedrion              ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
+x25519-chacha20poly1305={ git="ssh://git@github.com/entropyxyz/x25519-chacha20poly1305.git", branch="error-handling" }
 # TODO rm unneeded features
 tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 hex    ="0.4.3"
