--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
       - "all"
       - "--validator" # This is what makes the node a validator.
       - "--node-key=0000000000000000000000000000000000000000000000000000000000000001"
-      - "--rpc-endpoint"
+      - "--threshold-server-endpoint"
       - "http://tss-server:3001"
 
   bob-tss:
@@ -105,5 +105,5 @@ services:
       - "--validator" # This is what makes the node a validator.
       - "--bootnodes"
       - "/dns4/chain-node/tcp/30333/p2p/12D3KooWEyoppNCUx8Yx66oV9fJnriXwCcXwDDUA2kj6vnc6iDEp"
-      - "--rpc-endpoint"
+      - "--threshold-server-endpoint"
       - "http://bob-tss:3001"
