--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -42,3 +42,4 @@ x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly
 tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
 hex    ="0.4.3"
 colored="2.0.4"
+subxt-signer = "0.31.0"
