--- a/cliff.toml
+++ b/cliff.toml
@@ -52,7 +52,7 @@ footer="""
 """
 # postprocessors
 postprocessors=[
-  { pattern='<REPO>', replace="https://github.com/orhun/git-cliff" }, # replace repository URL
+  { pattern='<REPO>', replace="https://github.com/entropy/entropy-core" }, # replace repository URL
 ]
 
 [git]
