--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -67,7 +67,7 @@ sp-std                  ={ package="sp-std", git="https://github.com/paritytech/
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 log                     ={ version="0.4.0", default-features=false }
 pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
-pallet-constraints      ={ path="../constraints", default-features=false }
+pallet-programs      ={ path="../constraints", default-features=false }
 pallet-staking          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 pallet-session          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
 
@@ -90,7 +90,7 @@ std=[
   'frame-system/std',
   'frame-benchmarking/std',
   'pallet-balances/std',
-  'pallet-constraints/std',
+  'pallet-programs/std',
   'pallet-staking-extension/std',
   "sp-std/std",
   "sp-runtime/std",
@@ -99,7 +99,7 @@ std=[
 default=['std']
 runtime-benchmarks=[
   'frame-benchmarking',
-  'pallet-constraints/runtime-benchmarks',
+  'pallet-programs/runtime-benchmarks',
   'pallet-staking-extension/runtime-benchmarks',
 ]
 try-runtime=['frame-support/try-runtime']
