--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -22,51 +22,51 @@ version         ='3.0.0'
 [dependencies.frame-benchmarking]
 default-features=false
 git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v0.9.43"
+branch          ="polkadot-v1.0.0"
 optional        =true
 version         ='4.0.0-dev'
 
 [dependencies.frame-support]
 default-features=false
 git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v0.9.43"
+branch          ="polkadot-v1.0.0"
 version         ='4.0.0-dev'
 
 [dependencies.frame-system]
 default-features=false
 git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v0.9.43"
+branch          ="polkadot-v1.0.0"
 version         ='4.0.0-dev'
 
 [dependencies]
-pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 pallet-relayer          ={ version="3.0.0", default-features=false, path="../relayer" }
 pallet-constraints      ={ default-features=false, path="../constraints" }
 pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
 
 scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
 log                  ={ version="0.4.0", default-features=false }
-sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-sp-io                ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
+sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+sp-io                ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 lite-json            ={ version="0.1", default-features=false }
-sp-runtime           ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
-sp-core              ={ version="7.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
+sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-core              ={ version="21.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 entropy-shared       ={ path="../../crypto/shared", default-features=false, features=["wasm-no-std"] }
-sp-application-crypto={ version="7.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+sp-application-crypto={ version="23.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 
 [dev-dependencies]
-sp-keystore                    ={ version="0.13.0", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.43" }
+sp-keystore                    ={ version="0.27.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 parking_lot                    ="0.11.2"
-pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-babe                    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.43" }
+pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-babe                    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 
 [features]
 default=['std']
@@ -83,6 +83,7 @@ std=[
   'pallet-constraints/std',
   'pallet-balances/std',
   'pallet-babe/std',
+  'pallet-relayer/std',
   "sp-io/std",
   "sp-runtime/std",
   "sp-npos-elections/std",
