Rename `pallet-constraints` to `pallet-programs` (#451)
* Rename `pallet-constraints` to `pallet-programs`

* Update imports

* Rename constraints pallet folder to "programs"

* Update import paths

* Rename weight file

* Update lockfile

* Rename pallet in `construct_runtime`

* Update metadata

* Remove ACL and Architecture related code

* Remove `entropy-constraints` crate

Now that we've remove the ACL and Architecture code this isn't needed anymore.

* Move `ConstraintsError` to `user` module

* Update `subxt` calls to Program pallet

* Replace a bunch of "constraint"s with "program"s

* Same replacement, but for capitalized words

* Fix import name

* RustFmt

* Add a `CHANGELOG` entry

* RustFmt

--- a/pallets/transaction-pause/Cargo.toml
+++ b/pallets/transaction-pause/Cargo.toml
@@ -13,11 +13,11 @@ frame-system      ={ git="https://github.com/paritytech/substrate", branch="polk
 sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
 
 [dev-dependencies]
-sp-core           ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-io             ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-pallet-balances   ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-smallvec          ="1.4.1"
-pallet-constraints={ version="3.0.0-monthly-2021-10", default-features=false, path="../constraints" }
+pallet-balances={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+pallet-programs={ version="3.0.0-monthly-2021-10", default-features=false, path="../programs" }
+smallvec       ="1.4.1"
+sp-core        ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-io          ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 
 [features]
 default=["std"]
@@ -31,7 +31,7 @@ std=[
   "sp-runtime/std",
   "frame-support/std",
   "frame-system/std",
-  "pallet-constraints/std",
+  "pallet-programs/std",
   "sp-std/std",
 ]
 try-runtime=["frame-support/try-runtime"]
