--- a/pallets/programs/Cargo.toml
+++ b/pallets/programs/Cargo.toml
@@ -4,7 +4,7 @@ description='FRAME pallet template for defining custom runtime logic.'
 edition    ='2021'
 homepage   ='https://substrate.dev'
 license    ='AGPL-3.0-or-later'
-name       ='pallet-constraints'
+name       ='pallet-programs'
 publish    =false
 readme     ='README.md'
 repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
