--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -66,10 +66,10 @@ entropy-shared          ={ path="../../crypto/shared", default-features=false, f
 sp-std                  ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 log                     ={ version="0.4.0", default-features=false }
-pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
-pallet-constraints      ={ path="../constraints", default-features=false }
-pallet-staking          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-programs         ={ path="../programs", default-features=false }
 pallet-session          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-staking          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
@@ -90,7 +90,7 @@ std=[
   'frame-system/std',
   'frame-benchmarking/std',
   'pallet-balances/std',
-  'pallet-constraints/std',
+  'pallet-programs/std',
   'pallet-staking-extension/std',
   "sp-std/std",
   "sp-runtime/std",
@@ -99,7 +99,7 @@ std=[
 default=['std']
 runtime-benchmarks=[
   'frame-benchmarking',
-  'pallet-constraints/runtime-benchmarks',
+  'pallet-programs/runtime-benchmarks',
   'pallet-staking-extension/runtime-benchmarks',
 ]
 try-runtime=['frame-support/try-runtime']
