--- a/pallets/transaction-pause/Cargo.toml
+++ b/pallets/transaction-pause/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name   ="pallet-transaction-pause"
-version="3.0.0-monthly-2021-10"
-edition="2021"
+name      ="pallet-transaction-pause"
+version   ='0.0.7'
+authors   =['Entropy Cryptography <admin@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
+publish   =false
 
 [dependencies]
 codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false }
@@ -14,7 +19,7 @@ sp-std            ={ git="https://github.com/paritytech/substrate", branch="polk
 
 [dev-dependencies]
 pallet-balances={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-pallet-programs={ version="3.0.0-monthly-2021-10", default-features=false, path="../programs" }
+pallet-programs={ version="0.0.7", default-features=false, path="../programs" }
 smallvec       ="1.4.1"
 sp-core        ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
 sp-io          ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
