--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name   ="kvdb"
 version="0.1.0"
-edition="2021"
+authors   =['Entropy Cryptography <admin@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
 
 [dependencies]
 # Common
