--- a/crypto/testing-utils/Cargo.toml
+++ b/crypto/testing-utils/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name   ="testing-utils"
-version="0.1.0"
-edition="2021"
+version   ='0.0.7'
+authors   =['Entropy Cryptography <admin@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
+publish   =false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
