--- a/pallets/programs/Cargo.toml
+++ b/pallets/programs/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
-authors    =['Substrate DevHub <https://github.com/substrate-developer-hub>']
-description='FRAME pallet template for defining custom runtime logic.'
-edition    ='2021'
-homepage   ='https://substrate.dev'
-license    ='AGPL-3.0-or-later'
 name       ='pallet-programs'
-publish    =false
-readme     ='README.md'
-repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
-version    ='3.0.0-monthly-2021-10'
+version   ='0.0.7'
+authors   =['Entropy Cryptography <admin@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
+publish   =false
 
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
