--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -38,9 +38,9 @@ version         ='4.0.0-dev'
 
 [dependencies]
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-relayer          ={ version="3.0.0", default-features=false, path="../relayer" }
-pallet-programs         ={ default-features=false, path="../programs" }
-pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
+pallet-relayer          ={ version="0.0.7", default-features=false, path="../relayer" }
+pallet-programs         ={ version = "0.0.7", default-features=false, path="../programs" }
+pallet-staking-extension={ version="0.0.7", default-features=false, path="../staking" }
 
 scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
 log                  ={ version="0.4.0", default-features=false }
