--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name      ="server"
 version   ="0.1.0"
-authors   =['Entropy Cryptography <admin@entropy.xyz>']
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
 license   ='AGPL-3.0-or-later'
 repository='https://github.com/entropyxyz/entropy-core'
