--- a/pallets/helpers/Cargo.toml
+++ b/pallets/helpers/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name      ="helpers"
 version   ='0.0.7'
-authors   =['Entropy Cryptography <admin@entropy.xyz>']
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
 license   ='AGPL-3.0-or-later'
 repository='https://github.com/entropyxyz/entropy-core'
