Make TOML files more accurate (#456)

--- a/crypto/shared/Cargo.toml
+++ b/crypto/shared/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name   ="entropy-shared"
-version="0.1.0"
-edition="2021"
+name      ="entropy-shared"
+version   ="0.1.0"
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
 
 [dependencies]
 codec          ={ package="parity-scale-codec", version="3.0.0", default-features=false }
