--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name       ="entropy-protocol"
+name       ='entropy-protocol'
+version    ='0.0.1'
+authors    =['Entropy Cryptography <engineering@entropy.xyz>']
 description="Entropy Signing and DKG protocol execution and transport logic"
-version    ="0.0.1"
-edition    ="2021"
-license    ="AGPL-3.0-or-later"
+homepage   ='https://entropy.xyz/'
+license    ='AGPL-3.0-or-later'
+repository ='https://github.com/entropyxyz/entropy-core'
+edition    ='2021'
 
 [dependencies]
 async-trait    ="0.1.73"
