--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name   ="pallet-free-tx"
-version="3.0.0-monthly-2021-10"
-edition="2021"
+name      ='pallet-free-tx'
+version   ='0.0.7'
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
+publish   =false
 
 [dependencies]
 codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false }
@@ -25,8 +30,8 @@ pallet-bags-list               ={ version="4.0.0-dev", default-features=false, g
 pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-extension       ={ version="3.0.0", default-features=false, path="../staking" }
-pallet-relayer                 ={ version="3.0.0", default-features=false, path="../relayer" }
+pallet-staking-extension       ={ version="0.0.7", default-features=false, path="../staking" }
+pallet-relayer                 ={ version="0.0.7", default-features=false, path="../relayer" }
 pallet-authorship              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 sp-tracing                     ={ version="10.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 
