--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name       ='pallet-relayer'
-version    ='3.0.0'
-description='FRAME pallet template for defining custom runtime logic.'
-authors    =['Substrate DevHub <https://github.com/substrate-developer-hub>']
-homepage   ='https://substrate.dev'
-edition    ='2021'
-license    ='AGPL-3.0-or-later'
-publish    =false
-repository ='https://github.com/substrate-developer-hub/substrate-node-template/'
+name      ='pallet-relayer'
+version   ='0.0.7'
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
+edition   ='2021'
+publish   =false
 
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
@@ -66,10 +65,10 @@ entropy-shared          ={ path="../../crypto/shared", default-features=false, f
 sp-std                  ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
 pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 log                     ={ version="0.4.0", default-features=false }
-pallet-programs         ={ path="../programs", default-features=false }
+pallet-programs         ={ version="0.0.7", path="../programs", default-features=false }
 pallet-session          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 pallet-staking          ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-extension={ version="3.0.0", default-features=false, path="../staking" }
+pallet-staking-extension={ version="0.0.7", default-features=false, path="../staking" }
 
 [dev-dependencies]
 pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
