--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-authors   =['Substrate DevHub <https://github.com/substrate-developer-hub>']
-edition   ='2021'
-homepage  ='https://substrate.dev'
-license   ='AGPL-3.0-or-later'
 name      ='entropy-runtime'
-publish   =false
-repository='https://github.com/substrate-developer-hub/substrate-node-template/'
-version   ='3.0.0-monthly-2021-10'
+version   ='0.0.7'
+authors   =['Entropy Cryptography <engineering@entropy.xyz>']
+homepage  ='https://entropy.xyz/'
+license   ='AGPL-3.0-or-later'
+repository='https://github.com/entropyxyz/entropy-core'
 build     ='build.rs'
+edition   ='2021'
+publish   =false
 
 [package.metadata.docs.rs]
 targets=["x86_64-unknown-linux-gnu"]
@@ -100,13 +100,13 @@ pallet-nomination-pools-benchmarking={ version="1.0.0", default-features=false, 
 pallet-nomination-pools-runtime-api={ version="1.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 pallet-vesting={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
 
-pallet-relayer          ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/relayer' }
-pallet-slashing         ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/slashing' }
-pallet-programs         ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/programs' }
-pallet-staking-extension={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/staking' }
-pallet-transaction-pause={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/transaction-pause' }
-pallet-free-tx          ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/free-tx' }
-pallet-propagation      ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/propagation' }
+pallet-relayer          ={ version='0.0.7', default-features=false, path='../pallets/relayer' }
+pallet-slashing         ={ version='0.0.7', default-features=false, path='../pallets/slashing' }
+pallet-programs         ={ version='0.0.7', default-features=false, path='../pallets/programs' }
+pallet-staking-extension={ version='0.0.7', default-features=false, path='../pallets/staking' }
+pallet-transaction-pause={ version='0.0.7', default-features=false, path='../pallets/transaction-pause' }
+pallet-free-tx          ={ version='0.0.7', default-features=false, path='../pallets/free-tx' }
+pallet-propagation      ={ version='0.0.7', default-features=false, path='../pallets/propagation' }
 
 entropy-shared={ path="../crypto/shared", default-features=false, features=["wasm-no-std"] }
 
