Add additional logging, and improve parsing of arguments in wasm

--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -35,6 +35,7 @@ wasm-bindgen-futures={ version="0.4.37", optional=true }
 wasm-bindgen        ={ version="0.2.87", optional=true }
 wasm-bindgen-derive ={ version="0.2", optional=true }
 js-sys              ={ version="0.3.64", optional=true }
+web-sys             ={ version="0.3.64", features=["console"], optional=true }
 
 [features]
 server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat"]
@@ -46,6 +47,7 @@ wasm=[
   "dep:wasm-bindgen",
   "dep:wasm-bindgen-derive",
   "dep:js-sys",
+  "dep:web-sys",
 ]
 
 [lib]
