--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -23,7 +23,7 @@ synedrion={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
 
 # Async
 futures="0.3"
-tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
+tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
 
 # HTTP
 reqwest    ={ version="0.11", features=["json", "stream"] }
