--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -13,7 +13,7 @@ synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0
 serde          ={ version="1.0", features=["derive"], default-features=false }
 serde-big-array="0.5.1"
 subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0", default-features=false }
-subxt-signer   ={ version="0.31.0", features=[] }
+subxt-signer   ={ version="0.31.0", features=["sr25519"], default-features=false }
 tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
 x25519-dalek   ="2.0.0-pre.1"
 futures        ="0.3"
