Specify build platforms for Docker images
In particular we're adding the ARM64 platform which will allow us to run images on ARM Macs.

--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -63,6 +63,7 @@ jobs:
             PACKAGE=${{ inputs.docker_build_arg_package }}
           secrets: |
             credentials=${{ secrets.CI_MACHINE_USER_TOKEN }}
+          platforms: linux/amd64,linux/arm64
           labels: ${{ steps.meta.outputs.labels }}
           tags: ${{ steps.meta.outputs.tags }}
           push: true
