--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -36,6 +36,7 @@ wasm-bindgen        ={ version="0.2.87", optional=true }
 wasm-bindgen-derive ={ version="0.2", optional=true }
 js-sys              ={ version="0.3.64", optional=true }
 web-sys             ={ version="0.3.64", features=["console"], optional=true }
+base64              ={ version="0.13.0", optional=true }
 
 [features]
 server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat"]
@@ -48,6 +49,7 @@ wasm=[
   "dep:wasm-bindgen-derive",
   "dep:js-sys",
   "dep:web-sys",
+  "dep:base64",
 ]
 
 [lib]
