--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -41,7 +41,13 @@ js-sys              ={ version="0.3.64", optional=true }
 base64              ={ version="0.13.0", optional=true }
 
 [features]
-server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat", "subxt/native"]
+server=[
+  "dep:axum",
+  "dep:tokio-tungstenite",
+  "entropy-shared/std",
+  "subxt/substrate-compat",
+  "subxt/native",
+]
 wasm=[
   "entropy-shared/wasm",
   "subxt-signer/web",
